@@ -24,6 +24,8 @@ showLogo                = logo.gif
 compression             = false
 outputBuffering         = false
 banIpEnabled            = false
+denyList                =
+allowList               =
 tidyhtml                = false
 blocksEnabled           = true
 safeDelete              = true
