@@ -98,9 +98,23 @@ class SGL_Process_DetectBlackListing extends SGL_DecorateProcess
         SGL::logMessage(null, PEAR_LOG_DEBUG);
 
         if ($this->conf['site']['banIpEnabled']) {
-            if (in_array($_SERVER['REMOTE_ADDR'], $GLOBALS['_SGL']['BANNED_IPS'])) {
-                $msg = SGL_String::translate('You have been banned');
-                SGL::raiseError($msg, SGL_ERROR_BANNEDUSER, PEAR_ERROR_DIE);
+            $c = &SGL_Config::singleton();
+            $conf = $c->getAll();
+
+            if (!empty($conf['site']['allowList'])) {
+                $allowList = explode( ' ', $conf['site']['allowList']);
+                if ( !in_array( $_SERVER['REMOTE_ADDR'], $allowList)) {
+                    $msg = SGL_String::translate('You have been banned');
+                    SGL::raiseError($msg, SGL_ERROR_BANNEDUSER, PEAR_ERROR_DIE);
+                }
+            }
+
+            if (!empty($conf['site']['denyList'])) {
+                $denyList = explode( ' ', $conf['site']['denyList']);
+                if ( in_array( $_SERVER['REMOTE_ADDR'], $denyList)) {
+                    $msg = SGL_String::translate('You have been banned');
+                    SGL::raiseError($msg, SGL_ERROR_BANNEDUSER, PEAR_ERROR_DIE);
+                }
             }
         }
 
